# VC_2425

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: cmake-multi-platform.yml
.zed/: tasks.json
lib/: vc.cpp  vc.h
